# problem_bank_scripts

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .readthedocs.yml  CONTRIBUTING.rst  README.md  Untitled.ipynb  bump.sh  pyproject.toml  server.py  test.py
.github/workflows/: lint.yml  publish.yml  release.yml  tests.yml
data/: manual_vehicles.csv  names.csv  vehicles.csv
docs/: Makefile  make.bat  requirements.txt
docs/source/: api.rst  conf.py  index.rst  installation.rst  modules.rst  problem_bank_scripts.rst  question_creator.rst  usage.ipynb
docs/source/problem_bank_helpers/: problem_bank_helpers.rst  stats.rst
notebook_features/backticks_code_replacement/: backticks_code_replacement.ipynb
src/problem_bank_scripts/: README.md  __init__.py  attributions.json  lint_server.py  pl_to_md.py  prairielearn.py  problem_bank_scripts.py  qti_export.py  webwork_to_md.py
src/problem_bank_scripts/_vendored/: misc_utils.py  prairielearn.py  sympy_utils.py
src/problem_bank_scripts/inputs/: __init__.py  basic.py  inputs.py  multiple_choice.py  utils.py
src/problem_bank_scripts/scripts/: check_question.py  check_server_ast.py  cli.py  lint_server.py  process.py  process_q.py  process_questions.py
src/problem_bank_scripts/tui/: generate_questions.py  gpt.py  inputs.py  main.py  question.md.template  similarity.py  tui.py  utils.py  write_md.py
src/problem_bank_scripts/tui/known_questions/: openstax-stats-2e.json
src/problem_bank_scripts/tui/scrap-openstax/: fixText.ts  openstax.ts  utils.ts
test/regen-q11_multi-part/: q11_multi-part.md
tests/: conftest.py  infoSchema.json  test_md_to_pl.py  test_pl_to_md.py  test_problem_bank_scripts.py  test_validations.py
tests/test_question_templates/: .gitignore
tests/test_question_templates/question_expected_outputs/q01_multiple-choice/: info.json  server.py
tests/test_question_templates/question_expected_outputs/q02_number-input/: info.json  server.py
tests/test_question_templates/question_expected_outputs/q03_dropdown/: info.json  server.py
tests/test_question_templates/question_expected_outputs/q04_checkbox/: info.json
tests/test_question_templates/question_expected_outputs/q05_multi-part_feedback/: info.json
tests/test_question_templates/question_expected_outputs/q06_number-input_feedback/: info.json
tests/test_question_templates/question_expected_outputs/q07a_symbolic-input/: info.json
tests/test_question_templates/question_expected_outputs/q07b_symbolic-input/: info.json
tests/test_question_templates/question_expected_outputs/q10_integer-input/: info.json
tests/test_question_templates/question_expected_outputs/q11_multi-part/: info.json  server.py
tests/test_question_templates/question_generated_outputs/q01_multiple-choice/: info.json
tests/test_question_templates/question_generated_outputs/q02_number-input/: info.json
tests/test_question_templates/question_generated_outputs/q03_dropdown/: info.json
tests/test_question_templates/question_generated_outputs/q04_checkbox/: info.json
tests/test_question_templates/question_generated_outputs/q05_multi-part_feedback/: info.json  server.py
tests/test_question_templates/question_generated_outputs/q06_number-input_feedback/: info.json
tests/test_question_templates/question_generated_outputs/q07a_symbolic-input/: info.json
tests/test_question_templates/question_generated_outputs/q07b_symbolic-input/: info.json
tests/test_question_templates/question_generated_outputs/q10_integer-input/: info.json
tests/test_question_templates/question_generated_outputs/q11_multi-part/: info.json
tests/test_question_templates/question_inputs/q01_multiple-choice/: q01_multiple-choice.md
tests/test_question_templates/question_inputs/q02_number-input/: q02_number-input.md
tests/test_question_templates/question_inputs/q03_dropdown/: q03_dropdown.md
tests/test_question_templates/question_inputs/q04_checkbox/: q04_checkbox.md
tests/test_question_templates/question_inputs/q05_multi-part_feedback/: q05_multi-part_feedback.md
tests/test_question_templates/question_inputs/q06_number-input_feedback/: q06_number-input_feedback.md
tests/test_question_templates/question_inputs/q07a_symbolic-input/: q07a_symbolic-input.md
tests/test_question_templates/question_inputs/q07b_symbolic-input/: q07b_symbolic-input.md
tests/test_question_templates/question_inputs/q07c_symbolic-input-no-latex/: q07c_symbolic-input-no-latex.md
tests/test_question_templates/question_inputs/q09_file-upload/: q09_file-upload.md
tests/test_question_templates/question_inputs/q10_integer-input/: q10_integer-input.md
tests/test_question_templates/question_inputs/q11_multi-part/: q11_multi-part.md
tests/test_question_templates/question_inputs/q12_longtext-input/: q12_longtext-input.md
tests/test_question_templates/question_inputs/q13_file-editor-input/: q13_file-editor-input.md
tests/test_question_templates/question_inputs/q14_matching/: q14_matching.md
tests/test_question_templates/question_inputs/q14_string-input/: q14_string-input.md
tests/test_question_templates/question_inputs/q15_matching/: q15_matching.md
tests/test_question_templates/question_inputs/q16_matrix-input/: q16_matrix-input.md
tests/test_question_templates/question_inputs/q16_workspaces/: q16_workspaces.md
tests/test_question_templates/question_inputs/q17_workspaces/: q17_workspaces.md
tests/test_question_templates/question_inputs/q18_integer-input/: q18_integer-input.md
tests/test_question_templates/question_return_expected_outputs/q02_number-input/: q02_number-input.md
(+2404 files in other folders)
