[tool.poetry]
name = "problem_bank_scripts"
version = "0.11.0"
description = "A package with useful functions to convert between different problem bank formats."
authors = ["Open Problem Bank Team"]
license = "MIT"
readme = "README.md"
documentation = "https://problem_bank_scripts.readthedocs.io/en/latest/"
homepage = "https://github.com/open-resources/problem_bank_scripts"
repository = "https://github.com/open-resources/problem_bank_scripts"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pandas = "^2.2.2"
PyYAML = "^6.0.1"
docopt = "^0.6.2"
numpy = "^1.26.4"
markdown-it-py = "^2.2.0"
mdformat = "^0.7.14"
sympy = "^1.12.1"
problem-bank-helpers = "^0.2.7"
typing-extensions = "^4.12.2"
black = "^24.4.2"
gitpython = "^3.1.43"

[tool.poetry.group.dev.dependencies]
Sphinx = "^4.5.0"
nbsphinx = "^0.8.5"
ipykernel = "^5.5.6"
sphinx-autoapi = "^1.9.0"
sphinx-rtd-theme = "^0.5.2"
sphinxcontrib-napoleon = "^0.7"
pytest = "^8.2.2"
myst-nb = "^0.15"
myst-parser = "^0.17"

[tool.poetry.scripts]
lint_server = 'problem_bank_scripts.scripts.lint_server:main'
check_server_ast = 'problem_bank_scripts.scripts.check_server_ast:main'
process = 'problem_bank_scripts.scripts.process:main'
process_q = 'problem_bank_scripts.scripts.process_q:main'
checkq = 'problem_bank_scripts.scripts.check_question:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = ["error", "ignore::DeprecationWarning:problem_bank_helpers"]
